--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "multer": "^2.0.2"
   },
   "description": ""
 }
-
-
-
-
