--- a/relink-ui/package.json
+++ b/relink-ui/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "multer": "^2.0.2",
     "music-metadata-browser": "^2.5.11",
     "react": "^19.1.1",
