--- a/relink-ui/package.json
+++ b/relink-ui/package.json
@@ -14,7 +14,8 @@
     "multer": "^2.0.2",
     "music-metadata-browser": "^2.5.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
