--- a/relink-ui/package.json
+++ b/relink-ui/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "relink-ui",
+  "name": "relink-server",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "description": "ReLink MVP backend (Express + Spotify)",
+  "main": "server.cjs",
+  "type": "commonjs",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node server.cjs",
+    "dev": "node server.cjs",
+    "test": "echo \"No tests\" && exit 0"
+  },
+  "engines": {
+    "node": ">=18.18"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "multer": "^2.0.2",
-    "music-metadata-browser": "^2.5.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "node-fetch": "^3.3.2"
   }
 }
