--- a/relink-ui/package.json
+++ b/relink-ui/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "relink-server",
-  "version": "1.0.0",
+  "name": "relink-ui",
   "private": true,
-  "description": "ReLink MVP backend (Express + Spotify)",
-  "main": "server.cjs",
-  "type": "commonjs",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.cjs",
-    "dev": "node server.cjs",
-    "test": "echo \"No tests\" && exit 0"
-  },
-  "engines": {
-    "node": ">=18.18"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview --host --port 5173"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "node-fetch": "^3.3.2"
+    "@supabase/supabase-js": "^2.57.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^7.1.7"
   }
 }
