--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "server",
+  "name": "relink-server",
+  "private": true,
+  "type": "commonjs",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.cjs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2"
-  },
-  "description": ""
+  }
 }
+
+
+
