--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.2",
     "node-fetch": "^3.3.2"
   }
 }
-
-
-
